# task-golem

./: .gitignore  BACKLOG.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  phase-golem.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
.task-golem/: .gitignore  tasks.jsonl
_worklog/: 2026-02.md
benches/: ready_queue.rs
changes/TG-001_agent-native-work-tracker/: TG-001_agent-native-work-tracker_DESIGN.md  TG-001_agent-native-work-tracker_PRD.md  TG-001_agent-native-work-tracker_SPEC.md  TG-001_tech-research.md
changes/TG-002_validate-extension-key-collision-with-serde-flatten/: TG-002_validate-extension-key-collision_DESIGN.md  TG-002_validate-extension-key-collision_PRD.md  TG-002_validate-extension-key-collision_SPEC.md  TG-002_validate-extension-key-collision_TECH_RESEARCH.md
changes/TG-004_optimize-load-archive-ids-to-avoid-full-deserialization/: TG-004_DESIGN.md  (+3 more)
src/: errors.rs  git.rs  lib.rs  main.rs
tests/: add_test.rs  archive_test.rs  cache_test.rs  color_test.rs  completions_test.rs  concurrency_test.rs  config_test.rs  dep_test.rs  doctor_events_test.rs  doctor_test.rs  dump_test.rs  edit_test.rs  encoding_test.rs  events_archive_integration_test.rs  events_chokepoint_test.rs  events_cli_test.rs  events_concurrency_test.rs  idempotent_test.rs  init_test.rs  large_store_test.rs  lib_api_test.rs  lifecycle_test.rs  list_test.rs  lock_poc_test.rs  next_test.rs  parent_test.rs  query_test.rs  ready_test.rs  rm_test.rs  sandbox_test.rs  show_test.rs  stress_test.rs  transition_test.rs  verbose_test.rs
(+55 files in other folders)
