[package]
name = "task-golem"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fd-lock = "4"
hex = "0.4"
humantime = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
